<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.editprofile.EditProfileFragment">

    <data>
        <variable
            name="data"
            type="com.test.commbank.ui.editprofile.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_rounded_ice_line"
            android:layout_marginHorizontal="@dimen/dimen_small"
            android:layout_marginVertical="@dimen/dimen_xsmall"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintVertical_bias="0.3"/>

        <com.test.commbank.customview.FormSingle
            android:id="@+id/form_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/desc_user_name"
            app:hint="@string/input_your_name"
            app:errorText="@string/please_insert_your_name"
            app:typeText="text"
            android:layout_marginTop="@dimen/dimen_med"
            android:layout_marginHorizontal="@dimen/dimen_med"
            app:layout_constraintStart_toStartOf="@id/view_background"
            app:layout_constraintEnd_toEndOf="@id/view_background"
            app:layout_constraintTop_toTopOf="@id/view_background"/>

        <com.test.commbank.customview.FormSingle
            android:id="@+id/form_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/desc_user_email"
            app:hint="@string/input_your_email_address"
            app:errorText="@string/please_insert_a_valid_email_address"
            app:typeText="email"
            android:layout_marginTop="@dimen/dimen_med"
            android:layout_marginHorizontal="@dimen/dimen_med"
            app:layout_constraintStart_toStartOf="@id/view_background"
            app:layout_constraintEnd_toEndOf="@id/view_background"
            app:layout_constraintTop_toBottomOf="@id/form_name"/>

        <com.test.commbank.customview.FormSingle
            android:id="@+id/form_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/desc_user_gender"
            app:hint="@string/input_your_gender"
            app:errorText="@string/please_insert_your_gender"
            app:typeText="text"
            android:layout_marginTop="@dimen/dimen_med"
            android:layout_marginHorizontal="@dimen/dimen_med"
            app:layout_constraintStart_toStartOf="@id/view_background"
            app:layout_constraintEnd_toEndOf="@id/view_background"
            app:layout_constraintTop_toBottomOf="@id/form_email"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_primary"
            android:text="@string/submit"
            android:textColor="@{data.validInput ? @color/black : @color/blue_grey , default = @color/blue_grey}"
            android:enabled="@{data.validInput}"
            android:onClick="@{() -> data.isEdit ? data.navigator.updateUser() : data.navigator.addUser()}"
            android:padding="@dimen/dimen_small"
            android:layout_marginTop="@dimen/dimen_med"
            android:layout_marginHorizontal="@dimen/dimen_med"
            app:layout_constraintBottom_toBottomOf="@id/view_background"
            app:layout_constraintEnd_toEndOf="@id/view_background"
            app:layout_constraintStart_toStartOf="@id/view_background"
            app:layout_constraintTop_toBottomOf="@id/form_gender"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_to_browse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> data.navigator.goToBrowseProfileFragment()}"
            android:text="@string/show_all_users"
            android:background="@drawable/shape_button_primary"
            android:layout_marginHorizontal="@dimen/dimen_med"
            app:layout_constraintTop_toBottomOf="@id/view_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>